--- a/bill-compare-mongo/list.html
+++ b/bill-compare-mongo/list.html
@@ -1,8 +1,10 @@
 <!--script type="text/ng-template" id="list.html"-->
-    <table>
+<!--h1> Hello {{projects}}</h1-->
+<h1> Hello admin !</h1>
+<table>
        <thead>
        <tr>
-        <th>Name</th>
+           <th>Name </th>
         <th>Description</th>
        </tr>
        </thead>
@@ -12,5 +14,5 @@
            <td>{{project.description}}</td>
          </tr>
       </tbody>
-    </table>
+</table>
 <!--/script-->
