formatting, more docs in collection

--- a/bill-compare-mongo/compare.html
+++ b/bill-compare-mongo/compare.html
@@ -10,8 +10,8 @@
                 <td style="text-align: center;">Neighbor Rank: #{{project_two[0].NeighborRank}}</td>
             </tr>
             <tr>
-                <td><img alt="{{project_one[0].name}}" style="width: 90%;" src="{{project_one[0].Url}}" style="float:right"></td>
-                <td><img alt="{{project_two[0].name}}" style="width: 75%;" src="{{project_two[0].Url}}" style="float:right"></td>
+                <td><img alt="{{project_one[0].name}}" style="width: 90%;" ng-src="{{project_one[0].Url}}" style="float:right"></td>
+                <td><img alt="{{project_two[0].name}}" style="width: 80%;" ng-src="{{project_two[0].Url}}" style="float:right"></td>
             </tr>
             <tr>
                 <td>{{project_one[0].description}}</td>
