--- a/bill-compare-mongo/index.html
+++ b/bill-compare-mongo/index.html
@@ -9,7 +9,7 @@
     <body style="width: 600px; border:2px solid; padding: 10px; border-radius: 40px; border-style: double; ">
 
         <h2 style="text-align: center;">"Bill" Compare - A Mongo Angular JS project</h2>
-        <h4 style="text-align: center; border: 1px solid; padding: 4px; border-radius: 4px; border-style: solid; border-color: grey;">Powered by T r i s t a n</h4>
+        <h4 style="text-align: center; border: 1px solid; padding: 4px; border-radius: 4px; border-style: solid; border-color: grey;">Powered by T r i s t a n, Angularized by Uday</h4>
 
         <div ng-view></div>
 
