--- a/bill-compare-mongo/index.html
+++ b/bill-compare-mongo/index.html
@@ -6,10 +6,10 @@
         <script src="project.js"></script>
         <script src="mongo.js"></script>
     </head>
-    <body style="width: 600px; border:2px solid; padding: 10px; border-radius: 40px; border-style: double; ">
+    <body style="width: 50%; margin-left: auto; margin-right: auto; background-color:#b0e0e6;  border:2px solid; padding: 10px; border-radius: 40px; border-style: double; text-align: center; ">
 
         <h2 style="text-align: center;">"Bill" Compare - A Mongo Angular JS project</h2>
-        <h4 style="text-align: center; border: 1px solid; padding: 4px; border-radius: 4px; border-style: solid; border-color: grey;">Powered by T r i s t a n, Angularized by Uday</h4>
+        <h4 style="text-align: center; border: 1px solid; padding: 4px; border-radius: 4px; border-style: solid; border-color: grey;">Powered by T r i s t a n <br/>Angularized by U d a y</h4>
 
         <div ng-view></div>
 
